Adds more examples for recommended product and test